ignore/graph-example/db-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres-svc
  namespace: default
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
